# zectrix-desktop

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/skills/plugin-generator/: SKILL.md
.claude/skills/update-changelog/: SKILL.md
.github/workflows/: release.yml
assets/fonts/: README.md
docs/: public-apis-catalog.md  接口文档.md
docs/superpowers/plans/: 2024-04-24-page-manager.md  (+7 more)
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/: App.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri-conf.test.ts  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: calendar-bridge
src-tauri/src/: builtin_plugins.rs  lib.rs  main.rs  models.rs  plugin_output.rs  plugin_runtime.rs  plugin_tasks.rs  state.rs  stock_quote.rs  text_image.rs
src-tauri/src/api/: client.rs
src-tauri/src/builtin_plugins/: bilibili.rs  cat.rs  comfyui.rs  dog.rs  duck.rs  github_actions.rs  github_trending.rs  mod.rs  poetry.rs  qrcode.rs  waifu.rs
src-tauri/src/commands/: calendar_sync.rs  config.rs  devices.rs  image_loop.rs  images.rs  mod.rs  page_cache.rs  plugins.rs  stocks.rs  templates.rs  todos.rs  updater.rs
src-tauri/src/storage/: mod.rs  mod_test.rs
src-tauri/src/swift/: CalendarBridge.swift
src/app/: App.test.tsx  App.tsx  providers.tsx
src/hooks/: use-window-drag.ts  useAnalytics.ts
src/lib/: analytics.ts  date.ts  tauri.ts
src/test/: setup.ts
src/types/: gtag.d.ts
(+46 files in other folders)
