[package]
name = "zectrix-note-4"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zectrix_note_4_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
image = "0.25"
base64 = "0.22"
rfd = "0.15"
kamadak-exif = "0.5"
once_cell = "1"

[dev-dependencies]
tempfile = "3"

